Actividad nro2 de practica HTML
->Se agregó una carpeta para el almacenamiento de las imágenes que se van a utilizar.
-> Se modifican los vínculos para permitir que se abran en una nueva pestaña del navegador.

--- a/templates/galeria.html
+++ b/templates/galeria.html
@@ -10,10 +10,26 @@
         <a href="/index.html">Home</a>
         <a href="/templates/galeria.html">Galeria</a>
         <a href="/templates/tabla.html">Tabla</a>
-        <a href="https://www.google.com.ar/index.html">Google</a>
+        <a href="/templates/listas.html">Listas</a>
+        <a href="#vinculointerno">vinculointerno</a>
+        <a href="https://www.google.com.ar/index.html" target="_blank">Google</a>
     </header>
     <main>
-
+        <section>
+            <img src="/img/d074d32f1de07e4d5a6b20176ce81836.jpg" alt="imagen de piedras y sus nombres">
+            <h2>subtitulo</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit modi repellendus et ad praesentium architecto pariatur ex! Possimus assumenda atque accusantium sapiente? Atque impedit nam porro beatae, ipsum asperiores reprehenderit?</p>
+            <a href="https://i.pinimg.com/originals/d0/74/d3/d074d32f1de07e4d5a6b20176ce81836.jpg" target="_blank" >Abrir imagen</a>
+            <button>Descargar como PDF</button>
+            <a href="">Mandar un mail</a>
+        </section>
+        <p>Lorem ipsum dolor sit amet consectetur<br> adipisicing elit. Aperiam optio aliquid sunt dicta nam, accusamus obcaecati voluptatem perspiciatis<br> ex asperiores consectetur sint beatae molestias, dolore quo facere hic quam maxime!
+        Dolore esse eius necessitatibus,<br> eum dolorum tenetur neque quod accusamus quia, natus voluptates impedit ducimus id mollitia, <br>minima quaerat earum molestiae nam nobis iusto? Dolore eum illo minus blanditiis voluptas!
+        Deleniti in nostrum, quibusdam minus aliquid amet vel odit, iure est quae rerum esse ducimus ipsam fuga culpa nulla iste nobis! Suscipit eveniet eius<br> expedita eum recusandae necessitatibus similique corporis.
+        Soluta illo, tempora magni reiciendis, animi fugit deserunt corporis qui dicta, cumque possimus. Vel, at quisquam ipsam eligendi sint omnis blanditiis ipsum! Itaque eos modi enim, fugit natus iste aspernatur.
+        Quos nisi error aspernatur harum rerum culpa, reprehenderit suscipit eaque. Laboriosam dolores architecto aliquid a praesentium voluptate ex atque consequuntur quos quis. Soluta est necessitatibus, itaque aperiam temporibus blanditiis adipisci?
+        Ex dolor nobis ullam sed, dignissimos atque magnam temporibus non ipsa dolorum molestias quas eveniet obcaecati repellat quod nulla maxime suscipit. Cum perferendis quas amet itaque aut, voluptate eaque incidunt?</p>
+        <h3 id="vinculointerno">lol</h3>
     </main>
     <footer>
         
