--- a/templates/tabla.html
+++ b/templates/tabla.html
@@ -10,7 +10,8 @@
         <a href="/index.html">Home</a>
         <a href="/templates/galeria.html">Galeria</a>
         <a href="/templates/tabla.html">Tabla</a>
-        <a href="https://www.google.com.ar/index.html">Google</a>
+        <a href="/templates/listas.html">Listas</a>
+        <a href="https://www.google.com.ar/index.html" target="_blank">Google</a>
     </header>
     <main>
 
