--- a/templates/tabla.html
+++ b/templates/tabla.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabla</title>
+    <link rel="icon" href="/img/a6e5fe72ebe4b1d2f1e1ccabd7d6d175.ico">
 </head>
 <body>
     <header>
@@ -14,7 +15,25 @@
         <a href="https://www.google.com.ar/index.html" target="_blank">Google</a>
     </header>
     <main>
+        <section>
+            <div>
 
+            </div>
+            <div>
+
+            </div>
+        </section>
+        <section>
+            <div>
+
+            </div>
+            <div>
+
+            </div>
+        </section>
+        <section>
+            <!--Seccion para la tabla-->
+        </section>
     </main>
     <footer>
         
