Practico 3 terminado de HTML

--- a/templates/tabla.html
+++ b/templates/tabla.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabla</title>
     <link rel="icon" href="/img/a6e5fe72ebe4b1d2f1e1ccabd7d6d175.ico">
+    <title>Tabla</title>
+    <meta name="table" content="tablas y videos">
 </head>
 <body>
     <header>
@@ -24,15 +25,27 @@
             </div>
         </section>
         <section>
-            <div>
-
-            </div>
-            <div>
-
-            </div>
+            <iframe width="1326" height="746" src="https://www.youtube.com/embed/b9ay6zmSFMs" title="Audición de Progressive" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3347.6611498861134!2d-60.659132823556234!3d-32.959954573587694!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ab7230551ab1%3A0xd0bf60a5ad7ccc9b!2sEl%20Rosedal!5e0!3m2!1sen!2sar!4v1755102779171!5m2!1sen!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
         <section>
-            <!--Seccion para la tabla-->
+            <h2>Tabla</h2>
+            <table>
+                <tr>
+                    <th>Pros</th>
+                    <th>Contra</th>
+                    <th>Resultado</th>
+                </tr>
+                <tr>
+                    <td>son lindas</td>
+                    <td>cuestan papel</td>
+                    <td rowspan="2">las hare</td>
+                </tr>
+                <tr>
+                    <td>son faciles</td>
+                    <td>se pueden arrugar</td>
+                </tr>
+            </table>
         </section>
     </main>
     <footer>
