practica 4 de HTML finalizada

--- a/templates/galeria.html
+++ b/templates/galeria.html
@@ -12,6 +12,7 @@
         <a href="/templates/tabla.html">Tabla</a>
         <a href="/templates/listas.html">Listas</a>
         <a href="#vinculointerno">vinculointerno</a>
+        <a href="/templates/formulario.html">Formulario</a>
         <a href="https://www.google.com.ar/index.html" target="_blank">Google</a>
     </header>
     <main>
@@ -32,7 +33,7 @@
         <h3 id="vinculointerno">lol</h3>
     </main>
     <footer>
-        
+        <p>Página hecha por lucia9bide en GitHub</p>
     </footer>
 </body>
 </html>
