Modificando el header
-> Se agrega una carpeta para los archivos css
-> Se saca el margin y padding
-> Se agrega estilo al header

--- a/templates/listas.html
+++ b/templates/listas.html
@@ -3,16 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/img/a6e5fe72ebe4b1d2f1e1ccabd7d6d175.ico">
     <title>Listas</title>
+    <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
     <header>
-        <a href="/index.html">Home</a>
-        <a href="/templates/galeria.html">Galeria</a>
-        <a href="/templates/tabla.html">Tabla</a>
-        <a href="/templates/listas.html">Listas</a>
-        <a href="/templates/formulario.html">Formulario</a>
-        <a href="https://www.google.com.ar/index.html" target="_blank">Google</a>
+        <div class="logotipo">
+            <img class="logo" src="/img/a6e5fe72ebe4b1d2f1e1ccabd7d6d175.ico" alt="">
+        </div>
+        
+        <div class="links">
+            <a href="/index.html">Home</a>
+            <a href="/templates/galeria.html">Galeria</a>
+            <a href="/templates/tabla.html">Tabla</a>
+            <a href="/templates/listas.html">Listas</a>
+            <a href="/templates/formulario.html">Formulario</a>
+            <a href="https://www.google.com.ar/index.html" target="_blank">Google</a> 
+        </div>
     </header>
     <main>
         <section>
