--- a/templates/tabla.html
+++ b/templates/tabla.html
@@ -6,15 +6,22 @@
     <link rel="icon" href="/img/a6e5fe72ebe4b1d2f1e1ccabd7d6d175.ico">
     <title>Tabla</title>
     <meta name="table" content="tablas y videos">
+    <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
     <header>
-        <a href="/index.html">Home</a>
-        <a href="/templates/galeria.html">Galeria</a>
-        <a href="/templates/tabla.html">Tabla</a>
-        <a href="/templates/listas.html">Listas</a>
-        <a href="/templates/formulario.html">Formulario</a>
-        <a href="https://www.google.com.ar/index.html" target="_blank">Google</a>
+        <div class="logotipo">
+            <img class="logo" src="/img/a6e5fe72ebe4b1d2f1e1ccabd7d6d175.ico" alt="">
+        </div>
+        
+        <div class="links">
+            <a href="/index.html">Home</a>
+            <a href="/templates/galeria.html">Galeria</a>
+            <a href="/templates/tabla.html">Tabla</a>
+            <a href="/templates/listas.html">Listas</a>
+            <a href="/templates/formulario.html">Formulario</a>
+            <a href="https://www.google.com.ar/index.html" target="_blank">Google</a> 
+        </div>
     </header>
     <main>
         <section>
