avances con la practica 1 de css

--- a/css/index.css
+++ b/css/index.css
@@ -1,14 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
-
-.nunito-sans-munitoSans{
-  font-family: "Nunito Sans", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 200;
-  font-style: normal;
-  font-variation-settings:
-    "wdth" 100,
-    "YTLC" 500;
-}
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root{
     --background-color: #fffbdf;
@@ -17,6 +8,9 @@
     --shadow-details-2-color: #F2EBBF;
     --tittles-mark-color: #F06060;
     --text-color: #5C4B51;
+
+    --munitoSans-font: "Nunito Sans", sans-serif;
+    --workSans-font: "Work Sans", sans-serif;
 }
 
 * {
@@ -26,13 +20,14 @@
 
 body{
     background-color: var(--background-color);
+    font-family: var(--munitoSans-font);
 }
 
 header{
     background-color: var(--secondary-color);
     min-height: 60px;
     display: flex;
-    justify-content:flex-start;
+    justify-content:center;
     align-items: center;
 }
 
@@ -41,6 +36,7 @@ header{
     width: 50px;
     height: 50px;
     margin-right: 20px;
+    display: flex;
 }
 
 .vinculoHeader{
@@ -53,12 +49,21 @@ header{
     color: var(--background-color);
 }
 
+.tituloDiv{
+    display: flex;
+    justify-content:center;
+    align-items: center;
+}
 .titulo{
     color: var(--tittles-mark-color);
+    font-family: var(--workSans-font);
+    font-size: 28px;
 }
 
-#parrafo{
-    text-align: center;
+.parrafo{
+    text-align: justify;
+    text-justify: inter-word;
+    hyphens: auto;
 }
 
 footer{
