--- a/templates/listas.html
+++ b/templates/listas.html
@@ -14,12 +14,12 @@
         </div>
         
         <div class="links">
-            <a href="/index.html">Home</a>
-            <a href="/templates/galeria.html">Galeria</a>
-            <a href="/templates/tabla.html">Tabla</a>
-            <a href="/templates/listas.html">Listas</a>
-            <a href="/templates/formulario.html">Formulario</a>
-            <a href="https://www.google.com.ar/index.html" target="_blank">Google</a> 
+            <a class="vinculoHeader" href="/index.html">Home</a>
+            <a class="vinculoHeader" href="/templates/galeria.html">Galeria</a>
+            <a class="vinculoHeader" href="/templates/tabla.html">Tabla</a>
+            <a class="vinculoHeader" href="/templates/listas.html">Listas</a>
+            <a class="vinculoHeader" href="/templates/formulario.html">Formulario</a>
+            <a class="vinculoHeader" href="https://www.google.com.ar/index.html" target="_blank">Google</a> 
         </div>
     </header>
     <main>
